@@ -1,0 +1,2 @@
+[buildout]
+extends = test-plone-3.3.x.cfg
