@@ -1,0 +1,25 @@
+[buildout]
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.x.cfg
+
+package-name = collective.dancing
+
+[versions]
+BeautifulSoup = 3.1.0.1
+cssutils = 0.9.5.1
+collective.monkeypatcher = 1.0b2
+collective.singing = 0.6.13
+collective.z3cform.datetimewidget = 0.1a9
+five.intid = 0.4.3
+plone.app.z3cform = 0.4.9
+plone.z3cform = 0.5.9
+StoneageHTML = 0.1.5
+z3c.batching = 1.1.0
+z3c.form = 1.9.0
+z3c.formwidget.query = 0.5
+zc.lockfile = 1.0.0
+zc.queue = 1.1
+zope.app.catalog = 3.5.2
+zope.component = 3.5.1
+zope.i18n = 3.5.0
+zope.sendmail = 3.5.1
