@@ -1,0 +1,5 @@
+[buildout]
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.0.x.cfg
+
+package-name = collective.dancing
